--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Tgaja Johnson's Portfolio</h1>
-    <h2>I'm learning to be a Web Developer</h2>
+    <h2>I'm a Full-Time Student</h2>
     <hr>
     <h3><a href="./public/movie-ranking_1.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie ranking preview.PNG" height="200" alt="">
